# QubeDB

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  QUICK-START.md  QubeDB-Master-Roadmap.md  QubeDB-Setup.bat  SETUP-GUIDE.md  build-all.bat  build-gui.bat  build-installer.bat  build-single-exe.bat  build-windows.bat  docs.md  dokumentasi.md  install-all.bat  install-dependencies.bat  install-everything.bat  install-tauri.bat  install.md  quick-install.bat  readme.md  roadmap.md  run-everything.bat  run-gui-now.bat  run-gui.bat  start-gui.bat  test-all.bat  test-qubedb.bat  test.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
installer/linux/: installer.sh
installer/windows/: install.ps1  qubedb-installer.nsi
qubedb-core/: Cargo.toml
qubedb-core/examples/: api_server.rs  basic_usage.rs  cluster_streaming.rs  performance_test.rs  simple_usage.rs
qubedb-core/src/: embedded.rs  embedded_simple.rs  error.rs  index.rs  lib.rs  logging.rs  main.rs  network.rs  query.rs  storage.rs  types.rs
qubedb-core/src/api/: graphql.rs  mod.rs  rest.rs
qubedb-core/src/cluster/: mod.rs  replication.rs  sharding.rs
qubedb-core/src/drivers/: django.rs  go.rs  jdbc.rs  mod.rs  nodejs.rs  pdo.rs  rust.rs
qubedb-core/src/security/: mod.rs
qubedb-core/src/streaming/: kafka.rs  mod.rs
qubedb-gui/: Cargo.toml  GUI-FEATURES.md  README.md  package-lock.json
qubedb-gui/src/: main.rs
qubedb-gui/src-tauri/: tauri.conf.json
