[package]
name = "qubedb-core"
version = "0.1.0"
edition = "2021"
authors = ["QubeDB Team"]
description = "QubeDB - Next Generation Multi-Model Database"
license = "MIT"
repository = "https://github.com/qubedb/qubedb"

[lib]
name = "qubedb_core"
path = "src/lib.rs"

# [[bin]]
# name = "qubedb-server"
# path = "src/bin/server.rs"

[dependencies]
# Database & Storage (simplified for initial testing)
# rocksdb = "0.21"  # Commented out due to build issues
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Networking (simplified)
# tonic = "0.10"  # Commented out for now
# prost = "0.12"  # Commented out for now

# SQL Parser
sqlparser = "0.37"

# Vector Search (using alternatives that exist)
# faiss = "0.12"  # Not available, will implement later
# hnswlib = "0.1"  # Not available, will implement later

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"