[package]
name = "qubedb-core"
version = "0.1.0"
edition = "2021"
authors = ["QubeDB Team"]
description = "QubeDB - Next Generation Multi-Model Database"
license = "MIT"
repository = "https://github.com/qubedb/qubedb"

[lib]
name = "qubedb_core"
path = "src/lib.rs"

# [[bin]]
# name = "qubedb-server"
# path = "src/bin/server.rs"

[dependencies]
# Database & Storage (simplified for initial testing)
# rocksdb = "0.21"  # Commented out due to build issues
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Networking (simplified)
# tonic = "0.10"  # Commented out for now
# prost = "0.12"  # Commented out for now

# SQL Parser
sqlparser = "0.37"

# Vector Search (using alternatives that exist)
# faiss = "0.12"  # Not available, will implement later
# hnswlib = "0.1"  # Not available, will implement later

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# API dependencies (commented out for initial build)
# axum = { version = "0.7", features = ["json", "multipart"] }
# tower = "0.4"
# tower-http = { version = "0.5", features = ["cors", "trace"] }

# Security dependencies (commented out for initial build)
# jsonwebtoken = "9.0"
# uuid = { version = "1.0", features = ["v4", "serde"] }
# bcrypt = "0.15"
# rustls = "0.21"
# tokio-rustls = "0.24"

# GraphQL dependencies (commented out for initial build)
# async-graphql = "6.0"
# async-graphql-axum = "6.0"

# Streaming dependencies (commented out for initial build)
# async-trait = "0.1"
# rdkafka = { version = "0.36", optional = true }
# pulsar = { version = "0.6", optional = true }  # Commented out - version not available
# redis = { version = "0.24", optional = true }
# lapin = { version = "2.0", optional = true }