[package]
name = "qubedb-core"
version = "0.1.0"
edition = "2021"
authors = ["QubeDB Team"]
description = "QubeDB - Next Generation Multi-Model Database"
license = "MIT"
repository = "https://github.com/qubedb/qubedb"

[lib]
name = "qubedb_core"
path = "src/lib.rs"


[dependencies]
# Database & Storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Networking

# SQL Parser
sqlparser = "0.37"

# Vector Search

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
