[package]
name = "qubedb-gui"
version = "0.1.0"
edition = "2021"
authors = ["QubeDB Team"]
description = "QubeDB Desktop GUI Application"
license = "MIT"
repository = "https://github.com/qubedb/qubedb"

[[bin]]
name = "qubedb-gui"
path = "src/main.rs"

[dependencies]
# GUI Framework
tauri = { version = "1.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
qubedb-core = { path = "../qubedb-core" }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Async
tokio = { version = "1.0", features = ["full"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = "1.0"
